--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
     "@types/styled-components": "^5.0.1",
+    "lottie-ios": "3.1.3",
+    "lottie-react-native": "^3.3.2",
     "react": "16.11.0",
     "react-native": "0.62.1",
     "react-native-gesture-handler": "^1.6.1",
