--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@react-native-community/eslint-config": "^1.0.0",
     "@types/react": "^16.9.32",
     "@types/react-native": "^0.62.1",
+    "@types/react-redux": "^7.1.7",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "babel-jest": "^25.2.6",
     "eslint": "^6.8.0",
